@@ -109,6 +109,103 @@ name|PasswordAuthentication
 name|getPasswordAuthentication
 parameter_list|()
 block|{
+name|PasswordAuthentication
+name|result
+init|=
+literal|null
+decl_stmt|;
+name|String
+name|proxyHost
+init|=
+name|System
+operator|.
+name|getProperty
+argument_list|(
+literal|"http.proxyHost"
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|getRequestingHost
+argument_list|()
+operator|.
+name|equals
+argument_list|(
+name|proxyHost
+argument_list|)
+condition|)
+block|{
+name|String
+name|proxyUser
+init|=
+name|System
+operator|.
+name|getProperty
+argument_list|(
+literal|"http.proxyUser"
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+operator|(
+name|proxyUser
+operator|!=
+literal|null
+operator|)
+operator|&&
+operator|(
+name|proxyUser
+operator|.
+name|trim
+argument_list|()
+operator|.
+name|length
+argument_list|()
+operator|>
+literal|0
+operator|)
+condition|)
+block|{
+name|String
+name|proxyPass
+init|=
+name|System
+operator|.
+name|getProperty
+argument_list|(
+literal|"http.proxyPassword"
+argument_list|,
+literal|""
+argument_list|)
+decl_stmt|;
+name|Message
+operator|.
+name|debug
+argument_list|(
+literal|"authenicating to proxy server with username ["
+operator|+
+name|proxyUser
+operator|+
+literal|"]"
+argument_list|)
+expr_stmt|;
+name|result
+operator|=
+operator|new
+name|PasswordAuthentication
+argument_list|(
+name|proxyUser
+argument_list|,
+name|proxyPass
+operator|.
+name|toCharArray
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+else|else
+block|{
 name|Credentials
 name|c
 init|=
@@ -149,11 +246,15 @@ operator|+
 literal|"'"
 argument_list|)
 expr_stmt|;
-return|return
+if|if
+condition|(
 name|c
 operator|!=
 literal|null
-condition|?
+condition|)
+block|{
+name|result
+operator|=
 operator|new
 name|PasswordAuthentication
 argument_list|(
@@ -170,8 +271,11 @@ operator|.
 name|toCharArray
 argument_list|()
 argument_list|)
-else|:
-literal|null
+expr_stmt|;
+block|}
+block|}
+return|return
+name|result
 return|;
 block|}
 block|}
